//Commands.proto
edition = "2023";

package avionrelay.examples;

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";


// IMPORTANT: This uses EXAMPLE messages for demonstration.
// In production, define your own service with your domain-specific messages.

option csharp_namespace = "AvionRelay.Examples.SharedLibrary";

// Get status of a component
message GetStatusCommand {
    bool include_details = 1;
}

message StatusResponse {
    string status = 1;
    google.protobuf.Timestamp timestamp = 2;
    map<string, google.protobuf.Value> details = 3;
}

